Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis neque blanditiis aspernatur ad, illo iure velit assumenda officia hic quasi et voluptate sed similique suscipit impedit omnis corrupti veniam placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veniam incidunt assumenda unde dolor, quos eveniet ad consequatur exercitationem dignissimos porro, nihil, adipisci illum amet eaque. Odit porro repudiandae molestiae.</p>
 </body>
 </html>
